# nos-next

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
kernel/: CMakeLists.txt  main.cpp
kernel/boot/: boot.s
kernel/lib/: alloc.cpp  alloc.hpp  boot.hpp  cpp.hpp  gdt.cpp  gdt.hpp  idt.cpp  idt.hpp  io.cpp  io.hpp  isr.cpp  isr.hpp  keyboard.cpp  keyboard.hpp  list.hpp  new.hpp  page.cpp  page.hpp  pool.hpp  task.cpp  task.hpp  task.s  timer.cpp  timer.hpp  vga.cpp  vga.h  vga.hpp
kernel/std/: icxxabi.cpp  icxxabi.h  string.cpp  string.hpp
toolchain/: i386-elf.cmake  i386-unknown-elf.cmake  linker.ld
tools/: launch.sh  update_compile_commands.sh
